--- a/configs-fedora/kitty/kitty.conf
+++ b/configs-fedora/kitty/kitty.conf
@@ -22,7 +22,7 @@ foreground       #c0b18b
 # The background
 background       #262626
 background_opacity 0.5
-# background_image /home/orion13/Pictures/Wall/Mine/CS02.jpg
+# background_image 
 # background_image_layout cscaled
 
 # The foreground for selections
